--- a/playbook.yml
+++ b/playbook.yml
@@ -1,39 +1,38 @@
-name: Install Apache
-hosts: all
-become: yes
-
-tasks:
-  - name: Update packages
-    become: yes
-    command: yum update -y
-- name: installing httpd
-  package:
+- name: Install Apache
+  hosts: all
+  become: true
+  
+  tasks:
+    - name: Update packages
+      become: true
+      command: yum update -y
+    - name: installing httpd
+      package:
         name: httpd
         state: present
-- name: installing php
-  package:
+    - name: installing php
+      package:
         name: php
         state: present
-- name: starting httpd service
-  service:
+    - name: starting httpd service
+      service:
         name: httpd
         state: started
-- name: installing git
-  package:
+    - name: installing git
+      package:
         name: git
         state: present
-- name: formatting storage
-  filesystem:
-          fstype: ext4
-          dev : /dev/sdh
-- name: making folder
-  file:
+    - name: formatting storage
+      filesystem:
+        fstype: ext4
+        dev : /dev/sdh
+    - name: making folder
+      file:
         path: /var/www/html/
         state: directory
-
-- name: mounting storage
-  mount:
-  fstype: ext4
-      src: /dev/sdh
-      path: /var/www/html
-      state: mounted
+    - name: mounting storage
+      mount:
+        fstype: ext4
+        src: /dev/sdh
+        path: /var/www/html
+        state: mounted
