--- a/wordpress.yml
+++ b/wordpress.yml
@@ -97,6 +97,7 @@
         src: "/tmp/wordpress.tar.gz"
         dest: "/var/www/html"
         remote_src: yes
+        extra_opts: [--strip-components=1] # remove the top-level directory wordpress
       notify:
         - Set WordPress ownership
 
