--- a/playbooks/install_wordpress.yml
+++ b/playbooks/install_wordpress.yml
@@ -125,7 +125,7 @@
         src: "/tmp/wordpress.tar.gz"
         dest: "/var/www/html"
         remote_src: yes
-        extra_opts: [--strip-components=1] # remove the top-level directory wordpress
+        extra_opts: [--strip-components=1] # removes the top-level directory wordpress
       notify:
         - Set WordPress ownership
 
