--- a/playbooks/install_wordpress.yml
+++ b/playbooks/install_wordpress.yml
@@ -3,7 +3,7 @@
   hosts: all
   become: true
   vars:
-    mysql_root_password: "root"  # sudo mysql_secure_installation on wordpress instance before with Y to all
+    mysql_root_password: "new_password"  # sudo mysql_secure_installation on wordpress instance before with Y to all
     wordpress_db_name: "wordpress"
     wordpress_db_user: "wordpressuser"
     wordpress_db_password: "your_db_password"
@@ -61,20 +61,10 @@
         name: pymysql
         executable: pip3
 
-    - name: Change root password for MariaDB
-      mysql_user:
-        login_user: root
-        login_password: "{{ mysql_root_password }}"
-        user: root
-        password: "{{ mysql_root_password }}"
-        host_all: yes
-        check_implicit_admin: yes
-        state: present
-
-    - name: Change root password for MariaDB
-      ansible.builtin.command:
-        cmd: mysql -e "ALTER USER 'root'@'localhost' IDENTIFIED BY '{{ mysql_root_password }}';"
-      become: true
+    # - name: Change root password for MariaDB
+    #   ansible.builtin.command:
+    #     cmd: mysql -e "ALTER USER 'root'@'localhost' IDENTIFIED BY '{{ mysql_root_password }}';"
+    #   become: true
 
     - name: Create WordPress database
       mysql_db:
