--- a/playbooks/install_wordpress.yml
+++ b/playbooks/install_wordpress.yml
@@ -61,7 +61,7 @@
         name: pymysql
         executable: pip3
 
-    - name: Add a root password for MariaDB
+    - name: Add password to MariaDB root user
       ansible.builtin.command:
         cmd: mysql -e "ALTER USER 'root'@'localhost' IDENTIFIED BY 'root';"
       become: true
