--- a/playbooks/install_wordpress.yml
+++ b/playbooks/install_wordpress.yml
@@ -3,7 +3,7 @@
   hosts: all
   become: true
   vars:
-    mysql_root_password: "root"  # sudo mysql_secure_installation on wordpress instance before with Y to all
+    mysql_root_password: "root"
     wordpress_db_name: "wordpress"
     wordpress_db_user: "wordpressuser"
     wordpress_db_password: "your_db_password"
